--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,85 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Bangers|Cinzel:400,700,900|Lato:100,300,400,700,900|Lobster|Lora:400,700|Mansalva|Muli:200,300,400,600,700,800,900|Open+Sans:300,400,600,700,800|Oswald:200,300,400,500,600,700|Roboto:100,300,400,500,700,900&display=swap');
+
+font-family: 'Roboto', sans-serif;
+font-family: 'Mansalva', cursive;
+font-family: 'Lato', sans-serif;
+font-family: 'Open Sans', sans-serif;
+font-family: 'Oswald', sans-serif;
+font-family: 'Lora', serif;
+font-family: 'Muli', sans-serif;
+font-family: 'Lobster', cursive;
+font-family: 'Cinzel', serif;
+font-family: 'Bangers', cursive;
+
+.logo {
+  margin-bottom: 40px;
+  letter-spacing: 0.7em;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.logo-holder{
+  text-align:center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.logo-8 h3 {
+    color: #e74c3c;
+    font-family: 'Cinzel', serif;
+    font-weight: 300;
+    font-size: 30px;
+    line-height:1.3;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.logo-8 h3 span {
+    background: ;
+    color: #e74c3c;
+    display: inline-block;
+    line-height: 1.8;
+    padding: 0px;
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+    opacity:0.5;
+    margin-left:-34px;
 }
 
-.App-link {
-  color: #61dafb;
+.productgalleries{
+  margin-top: 20px;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.slider{
+  display:inline-block;
+  overflow:hidden;
+}
+
+a:before {
+  content:attr(rel);
+  position:absolute;
+  top:20px;
+}
+
+a{
+  position:relative;
+  top:0;
+  -webkit-transition-duration: .25s;
+  text-decoration: none !important;
+}
+
+a:hover {
+  top:-4px;
+  -webkit-transition-duration: .25s;
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
 }
